--- a/popover.css
+++ b/popover.css
@@ -2,74 +2,85 @@
  * jQuery.popover example stylesheet.
  * By Davey IJzermans
  * http://daveyyzermans.nl
- * 
+ *
  * License: public domain
  */
 
 .popover {
-	position: absolute;
-	top: 0; left: 0;
-	max-height: 240px;
-	width: 220px;
-	display: none;
+  position : absolute;
+  top      : 0;
+  left     : 0;
+  display  : none;
+  width    : 220px;
 }
-.popover.wider {
-	width: 340px;
-}
-.popover.large {
-	width: 470px;
-	max-height: 350px;
-}
+
+.popover.wider { width: 340px; }
+
+.popover.large { width: 470px; }
+
 .popover .arrow, .popover .top-arrow {
-	position: absolute;
-	top: 0; left: 50%;
-	margin: -10px 0 0 -3px;
-	width: 0; height: 0;
-	border-top: 5px solid transparent;
-	border-left: 5px solid transparent;
-	border-right: 5px solid transparent;
-	border-bottom: 5px solid #121212;
+  position : absolute;
+  top      : 0;
+  left     : 50%;
+  width    : 18px;
+  height   : 9px;
+  margin   : -9px 0 0 -9px;
+  background-repeat : no-repeat;
+  background-image  : url(top-arrow.png);
 }
+
 .popover .bottom-arrow {
-	top: 100%; left: 50%;
-	margin: 0 0 0 -3px;
-	border-top: 5px solid #121212;
-	border-bottom: 5px solid transparent;
+  top    : 100%;
+  margin : 0 0 0 -9px;
+  background-image: url(bottom-arrow.png);
 }
+
 .popover .left-arrow {
-	top: 50%; left: -10px;
-	margin: -3px 0 0;
-	border-right: 5px solid #121212;
-	border-bottom: 5px solid transparent;
+  top: 50%;
+  left: -9px;
+  width: 9px;
+  height: 18px;
+  margin: -7px 0 0 0;
+  background-image: url(left-arrow.png);
 }
+
 .popover .right-arrow {
-	top: 50%; left: 100%;
-	margin: -3px 0 0;
-	border-left: 5px solid #121212;
-	border-bottom: 5px solid transparent;
+  top    : 50%;
+  left   : 100%;
+  width  : 9px;
+  height : 18px;
+  margin : -7px -9px 0 0;
+  background-image: url(right-arrow.png);
 }
+
 .popover .wrap {
-	background: white;
-	border: 3px solid #121212;
-	border-radius: 4px;
-	-moz-border-radius: 4px;
-	-webkit-border-radius: 4px;
+  color      : #fff;
+  background : #111;
+  background : rgba(0,0,0, 0.81);
+  background-image : -webkit-linear-gradient(90deg, rgba(0,0,0, 0.3) 0%, rgba(0,0,0,.3) 80%, rgba(255,255,255,.3) 100%);
+  background-image : -moz-linear-gradient(90deg,    rgba(0,0,0, 0.3) 0%, rgba(0,0,0,.3) 80%, rgba(255,255,255,.3) 100%);
+  background-image : linear-gradient(90deg,         rgba(0,0,0, 0.3) 0%, rgba(0,0,0,.3) 80%, rgba(255,255,255,.3) 100%);
+  -moz-border-radius: 6px;
+  -webkit-border-radius: 6px;
+  border-radius: 6px;
+  -webkit-box-shadow: 0 4px 10px rgba(0,0,0, 0.4);
+  -moz-box-shadow: 0 4px 10px rgba(0,0,0, 0.4);
+  box-shadow: 0 4px 10px rgba(0,0,0, 0.4);
 }
+
 .popover .title {
-	background: #121212 url(popover_gradient.png) repeat-x;
-	color: white;
-	font-size: 1.3em;
-	text-align: center;
-	padding: 8px 0 0 0;
-	height: 27px;
+  display    : none;
+  height     : 27px;
+  padding    : 8px 0 0 0;
+  color      : white;
+  font-size  : 1.3em;
+  text-align : center;
+  background : #121212;
 }
+
 .popover .content {
-	padding: 15px;
-	max-height: 175px;
-	overflow: auto;
-	line-height: 1.3em;
-	font-size: 0.9em;
-}
-.popover.large .content {
-	max-height: 285px;
+  overflow    : auto;
+  padding     : 15px;
+  font-size   : 0.9em;
+  line-height : 1.3em;
 }
