--- a/popover.css
+++ b/popover.css
@@ -1,65 +1,54 @@
-/**
- * jQuery.popover example stylesheet.
- * By Davey IJzermans
- * http://daveyyzermans.nl
- *
- * License: public domain
- */
-
 .popover {
-  position : absolute;
-  top      : 0;
-  left     : 0;
-  display  : none;
-  width    : 220px;
+  position: absolute;
+  top: 0;
+  left: 0;
+  display: none;
+  width: 220px;
 }
 
 .popover.wider { width: 340px; }
-
 .popover.large { width: 470px; }
 
-.popover .arrow, .popover .top-arrow {
-  position : absolute;
-  top      : 0;
-  left     : 50%;
-  width    : 18px;
-  height   : 9px;
-  margin   : -9px 0 0 -9px;
-  background-repeat : no-repeat;
-  background-image  : url(top-arrow.png);
+.popover-arrow, .popover .popover-top-arrow {
+  position: absolute;
+  top: 0;
+  left: 50%;
+  width: 0;
+  height: 0;
+  margin: -7px 0 0 -8px;
+  border-bottom: 8px solid #353535;
+  border-left: 8px solid transparent;
+  border-right: 8px solid transparent;
 }
 
 .popover .bottom-arrow {
-  top    : 100%;
-  margin : 0 0 0 -9px;
-  background-image: url(bottom-arrow.png);
+  top: 100%;
+  margin: 0 0 0 -9px;
+  border-top: 8px solid #353535;
+  border-bottom: 0;
 }
 
 .popover .left-arrow {
   top: 50%;
   left: -9px;
-  width: 9px;
-  height: 18px;
-  margin: -7px 0 0 0;
-  background-image: url(left-arrow.png);
+  margin: -7px 0 0 -7px;
+  border-bottom: 8px solid transparent;
+  border-right: 8px solid #353535;
+  border-top: 8px solid transparent;
 }
 
 .popover .right-arrow {
-  top    : 50%;
-  left   : 100%;
-  width  : 9px;
-  height : 18px;
-  margin : -7px -9px 0 0;
-  background-image: url(right-arrow.png);
+  top: 50%;
+  left: 100%;
+  margin: -7px 0 0 0;
+  border-bottom: 8px solid transparent;
+  border-left: 8px solid #353535;
+  border-top: 8px solid transparent;
 }
 
-.popover .wrap {
-  color      : #fff;
-  background : #111;
-  background : rgba(0,0,0, 0.81);
-  background-image : -webkit-linear-gradient(90deg, rgba(0,0,0, 0.3) 0%, rgba(0,0,0,.3) 80%, rgba(255,255,255,.3) 100%);
-  background-image : -moz-linear-gradient(90deg,    rgba(0,0,0, 0.3) 0%, rgba(0,0,0,.3) 80%, rgba(255,255,255,.3) 100%);
-  background-image : linear-gradient(90deg,         rgba(0,0,0, 0.3) 0%, rgba(0,0,0,.3) 80%, rgba(255,255,255,.3) 100%);
+.popover-wrap {
+  color: #fff;
+  background: #353535;
   -moz-border-radius: 6px;
   -webkit-border-radius: 6px;
   border-radius: 6px;
@@ -68,19 +57,16 @@
   box-shadow: 0 4px 10px rgba(0,0,0, 0.4);
 }
 
-.popover .title {
-  display    : none;
-  height     : 27px;
-  padding    : 8px 0 0 0;
-  color      : white;
-  font-size  : 1.3em;
-  text-align : center;
-  background : #121212;
+.popover-title {
+  display: none;
+  height: 27px;
+  padding: 8px 0 0 0;
+  color: white;
+  font-size: 1.3em;
+  text-align: center;
+  background: #121212;
 }
 
-.popover .content {
-  overflow    : auto;
-  padding     : 15px;
-  font-size   : 0.9em;
-  line-height : 1.3em;
+.popover-content {
+  overflow: auto;
 }
